# Blear

./: .gitignore  AGENTS.md  BUILDING.md  CHANGELOG.md  Cargo.toml  README.md  TEST_STRATEGY.md  UI_INVENTORY.md  WARNINGS_AND_GAPS.md  package.json
crate/: Cargo.toml
crate/src/: autostart.rs  cpu_sampler.rs  evdev_hotkey.rs  i18n.rs  main.rs  settings.rs  updater.rs  xwayland.rs
crate/src/backend/: linux.rs  linux_xtest.rs  macos.rs  mod.rs  wayland.rs  windows.rs
crate/src/engine/: cycle.rs  failsafe.rs  mod.rs  rng.rs  worker.rs
crate/src/ui/: advanced_panel.rs  mod.rs  sequence_picker.rs  settings_panel.rs  simple_panel.rs  title_bar.rs  widgets.rs  zone_drawer.rs  zones_panel.rs
src/: App.tsx  i18n.ts  settingsSchema.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  ui_commands.rs
src-tauri/src/engine/: failsafe.rs  process.rs  worker.rs
src-tauri/src/settings/: mod.rs
src/components/: TitleBar.tsx
src/components/panels/: SettingsPanel.tsx
src/components/panels/advanced/: AdvancedPanel.css
src/components/panels/zones/: ProcessListSection.tsx  ZonesPanel.tsx
src/locales/: ar.json  de.json  en.json  es.json  fr.json  he.json
